syntax = "proto3";

package block;

// IMPORTS

import "transaction.proto";

// INTERFACE

message ExecutedTransaction {
    bytes digest = 1;
    string result = 2;
    transaction.SignedTransaction signed_transaction = 3;
}

message Block {
    repeated ExecutedTransaction executed_transactions = 1;
}

message BlockInfo {
   uint64 block_number = 1; 
   bytes digest = 2;
}